About section done --

--- a/index.html
+++ b/index.html
@@ -72,8 +72,33 @@
     </a>
     
  
+ <section id="about">
+    <div class="container about__container">
+        <h2 class="about__title">About<br/> John Smith </h2>
+     <a href="mailto:winchesse99@gmail.com" class="contact__btn about__btn"> <i class="fas fa-external-link-alt"></i>
+        <p>CONTACT - SEND ME AN EMAIL</p></a>
 
+        <div class="about__left">
+            <div class="about__image">
+                <div class="about__image-bg"></div>
+                <div class="about__image-lg">
+                    <img src="Images/test2" alt="about img">
+                </div>
+                <div class="about__image-sm"><img src="Images/test2" alt="about img"></div>
+            </div>
+        </div>
+        <div class="about__right">
+            <div class="empty about__empty"></div>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate assumenda ea eum eveniet! Quos officiis, provident ipsam recusandae, et eum sequi dolorum, corrupti sunt!</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora sequi delectus animi commodi voluptatibus laboriosam nihil soluta? Consequuntur non id voluptate ullam, cupiditate, accusantium dicta tenetur, natus dolor repellendus vel? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, veritatis! Excepturi velit reprehenderit, dicta suscipit repellat natus eius, alias illum sit quam labore ipsa facere quidem laborum odit sunt molestias.</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus voluptatum sequi repellendus beatae doloremque culpa ipsa magnam rem repudiandae blanditiis voluptate quisquam.</p>
+        </div>
 
+    </div>
+ </section>
+  
+
+ <section></section>
 
 
 
