started Gallery Section

--- a/index.html
+++ b/index.html
@@ -98,7 +98,15 @@
  </section>
   
 
- <section></section>
+ <section id="gallery">
+    <div class="container gallery__container">
+        <div class="gallery__head">
+            <h2 class="gallery__title">My Gallery</h2>
+            <div class="empty gallery__empty"></div>
+        </div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam officia accusamus rem, sit assumenda quam architecto laboriosam dignissimos temporibus culpa molestias suscipit, aliquid velit rep facilis.</p>
+    </div>
+ </section>
 
 
 
