Nav-Toggle - MediaQueries

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#gallery">Gallery</a></li>
-                <li><a href="#exhibition">Exhibition</a></li>
+                <li><a href="#exhibitions">Exhibition</a></li>
             </ul>
             <ul class="nav__socials">
                 <li><a href="https://instagram.com/" target="_blank"> <i class="fab fa-instagram"></i></a></li>
