--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
     />
 
-    <link href="style/style.css" rel="stylesheet">
+    <link href="Style/style.css" rel="stylesheet">
 </head>
 <body>
     <nav>
