--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 
     <div class="header__frames">
         <div class="header__frame">
-            <img src="Images/frame1" alt="Frame1">
+            <img src="Images/Frame1'.jpg" alt="Frame1">
         </div>
         <div class="header__frame">
-            <img src="Images/frame2" alt="Frame2">
+            <img src="Images/Frame3.jpg" alt="Frame2">
         </div>
     </div>
     
@@ -121,28 +121,28 @@
                 <img src="Images/P4.jpg">
             </article>
             <article class="swiper-slide">
-                <img src="Images/P6..JPG">
+                <img src="Images/P20JPG.JPG">
             </article>
             <article class="swiper-slide">
-                <img src="Images/P5.jpg">
+                <img src="Images/P18.JPG"> 
             </article>
             <article class="swiper-slide">
-                <img src="Images/P6..JPG">
+                <img src="Images/P23.jpg">
             </article>
             <article class="swiper-slide">
-                <img src="Images/P7..JPG">
+                <img src="Images/P24.jpg">
             </article>
             <article class="swiper-slide">
                 <img src="Images/P8..JPG">
             </article>
             <article class="swiper-slide">
-                <img src="Images/P9..JPG">
+                <img src="Images/P27.jpg"> 
             </article>
             <article class="swiper-slide">
-                <img src="Images/P10..JPG">
+                <img src="Images/P30..JPG">
             </article>
             <article class="swiper-slide">
-                <img src="Images/P11.JPG">
+                <img src="Images/P29.jpg">
             </article>
         </div>
         <div class="swiper-pagination"></div>
