--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                 <li><a href="#exhibitions">Exhibition</a></li>
             </ul>
             <ul class="nav__socials">
-                <li><a href="https://instagram.com/" target="_blank"> <i class="fab fa-instagram"></i></a></li>
-                <li><a href="https://instagram.com/" target="_blank"> <i class="fab fa-twitter"></i></a></li>
-                <li><a href="https://instagram.com/" target="_blank"> <i class="fab fa-youtube"></i></a></li>
+                <li><a href="https://www.instagram.com/kavoma_photography/?r=nametag" target="_blank"> <i class="fab fa-instagram"></i></a></li>
+                <li><a href="https://www.instagram.com/kavoma_photography/?r=nametag/" target="_blank"> <i class="fab fa-twitter"></i></a></li>
+                <li><a href="https://youtu.be/U3Aw6QkNaNo" target="_blank"> <i class="fab fa-youtube"></i></a></li>
             </ul>
             <button class="na_toggle-btn" id="nav_toggle-open"><i class="fa fa-bars" aria-hidden="true"></i></button>
             <button class="na_toggle-btn" id="nav_toggle-close"><i class="fa fa-close"></i></button>
@@ -81,7 +81,7 @@
  
  <section id="about">
     <div class="container about__container">
-        <h2 class="about__title">About<br/> John Smith </h2>
+        <h2 class="about__title">About<br/> Peter Butoto </h2>
      <a href="mailto:bkavoma@gmail.com" class="contact__btn about__btn"> <i class="fas fa-external-link-alt"></i>
         <p>CONTACT - SEND ME AN EMAIL</p></a>
 
